parent 580d33b63b9d7130b448f753f307f0fd53e43f73 author Mustafa <mustafa.cetin@intel.com> 1739513513 -0800 committer Mustafa <mustafa.cetin@intel.com> 1743715605 -0700
parent 580d33b63b9d7130b448f753f307f0fd53e43f73
author Mustafa <mustafa.cetin@intel.com> 1739513513 -0800
committer Mustafa <mustafa.cetin@intel.com> 1743714982 -0700

update the compose file

Signed-off-by: Mustafa <mustafa.cetin@intel.com>

initial

Signed-off-by: Mustafa <mustafa.cetin@intel.com>

update codegen

Signed-off-by: Mustafa <mustafa.cetin@intel.com>

update for codegen

Signed-off-by: Mustafa <mustafa.cetin@intel.com>

add agents

Signed-off-by: Mustafa <mustafa.cetin@intel.com>

env updates

Signed-off-by: Mustafa <mustafa.cetin@intel.com>

update codegen

Signed-off-by: Mustafa <mustafa.cetin@intel.com>

merged to main

Signed-off-by: Mustafa <mustafa.cetin@intel.com>

updates

Signed-off-by: Mustafa <mustafa.cetin@intel.com>

update the env variables

Signed-off-by: Mustafa <mustafa.cetin@intel.com>

update compose.yaml

Signed-off-by: Mustafa <mustafa.cetin@intel.com>

compose.yaml updates

Signed-off-by: Mustafa <mustafa.cetin@intel.com>

update readme

Signed-off-by: Mustafa <mustafa.cetin@intel.com>

update the compose file

Signed-off-by: Mustafa <mustafa.cetin@intel.com>

initial

Signed-off-by: Mustafa <mustafa.cetin@intel.com>

added microservice ports

Signed-off-by: okhleif-IL <omar.khleif@intel.com>

update codegen

Signed-off-by: Mustafa <mustafa.cetin@intel.com>

update for codegen

Signed-off-by: Mustafa <mustafa.cetin@intel.com>

Initial commit for Gradio UI

Signed-off-by: okhleif-IL <omar.khleif@intel.com>

New UI

Signed-off-by: okhleif-IL <omar.khleif@intel.com>

prepare for merge

Signed-off-by: okhleif-IL <omar.khleif@intel.com>

add agents

Signed-off-by: Mustafa <mustafa.cetin@intel.com>

env updates

Signed-off-by: Mustafa <mustafa.cetin@intel.com>

update codegen

Signed-off-by: Mustafa <mustafa.cetin@intel.com>

merged to main

Signed-off-by: Mustafa <mustafa

--- a/CodeGen/docker_compose/intel/hpu/gaudi/compose.yaml
+++ b/CodeGen/docker_compose/intel/hpu/gaudi/compose.yaml
@@ -112,11 +112,12 @@ services:
       - REDIS_RETRIEVER_PORT=${REDIS_RETRIEVER_PORT}
       - TEI_EMBEDDING_HOST_IP=${TEI_EMBEDDING_HOST_IP}
       - EMBEDDER_PORT=${EMBEDDER_PORT}
+      - host_ip=${host_ip}
     ipc: host
     restart: always
-  codegen-xeon-ui-server:
+  codegen-gaudi-ui-server:
     image: ${REGISTRY:-opea}/codegen-gradio-ui:${TAG:-latest}
-    container_name: codegen-xeon-ui-server
+    container_name: codegen-gaudi-ui-server
     depends_on:
       - codegen-gaudi-backend-server
     ports:
@@ -132,7 +133,6 @@ services:
       - DATAPREP_REDIS_PORT=${DATAPREP_REDIS_PORT}
     ipc: host
     restart: always
-
   redis-vector-db:
     image: redis/redis-stack:7.2.0-v9
     container_name: redis-vector-db
@@ -214,7 +214,6 @@ services:
       LOGFLAG: ${LOGFLAG}
       RETRIEVER_COMPONENT_NAME: ${RETRIEVER_COMPONENT_NAME:-OPEA_RETRIEVER_REDIS}
     restart: unless-stopped
-
 networks:
   default:
     driver: bridge
