update the compose file
Signed-off-by: Mustafa <mustafa.cetin@intel.com>

initial

Signed-off-by: Mustafa <mustafa.cetin@intel.com>

added microservice ports

Signed-off-by: okhleif-IL <omar.khleif@intel.com>

update codegen

Signed-off-by: Mustafa <mustafa.cetin@intel.com>

update for codegen

Signed-off-by: Mustafa <mustafa.cetin@intel.com>

Initial commit for Gradio UI

Signed-off-by: okhleif-IL <omar.khleif@intel.com>

New UI

Signed-off-by: okhleif-IL <omar.khleif@intel.com>

prepare for merge

Signed-off-by: okhleif-IL <omar.khleif@intel.com>

add agents

Signed-off-by: Mustafa <mustafa.cetin@intel.com>

env updates

Signed-off-by: Mustafa <mustafa.cetin@intel.com>

update codegen

Signed-off-by: Mustafa <mustafa.cetin@intel.com>

merged to main

Signed-off-by: Mustafa <mustafa.cetin@intel.com>

updates

Signed-off-by: Mustafa <mustafa.cetin@intel.com>

UI Updates

Signed-off-by: okhleif-IL <omar.khleif@intel.com>

added dockerfile

Signed-off-by: okhleif-IL <omar.khleif@intel.com>

removed files dataframe

Signed-off-by: okhleif-IL <omar.khleif@intel.com>

updated file upload

Signed-off-by: okhleif-IL <omar.khleif@intel.com>

added checkbox for agent

Signed-off-by: okhleif-IL <omar.khleif@intel.com>

key_index_name --> index_name

Signed-off-by: okhleif-IL <omar.khleif@intel.com>

added / removed print statements

Signed-off-by: okhleif-IL <omar.khleif@intel.com>

Support for data streaming (from Melanie)

Signed-off-by: okhleif-IL <omar.khleif@intel.com>

fixed file not supported bug

Signed-off-by: okhleif-IL <omar.khleif@intel.com>

added refresh button to index

Signed-off-by: okhleif-IL <omar.khleif@intel.com>

simplified README

Signed-off-by: okhleif-IL <omar.khleif@intel.com>

--- a/CodeGen/docker_image_build/build.yaml
+++ b/CodeGen/docker_image_build/build.yaml
@@ -23,6 +23,12 @@ services:
       dockerfile: ./docker/Dockerfile.react
     extends: codegen
     image: ${REGISTRY:-opea}/codegen-react-ui:${TAG:-latest}
+  codegen-gradio-ui:
+    build:
+      context: ../ui
+      dockerfile: ./docker/Dockerfile.gradio
+    extends: codegen
+    image: ${REGISTRY:-opea}/codegen-gradio-ui:${TAG:-latest}
   llm-textgen:
     build:
       context: GenAIComps
