--- a/CodeGen/docker_compose/intel/cpu/xeon/compose.yaml
+++ b/CodeGen/docker_compose/intel/cpu/xeon/compose.yaml
@@ -5,13 +5,11 @@ services:
 
   tgi-service:
     image: ghcr.io/huggingface/text-generation-inference:2.4.0-intel-cpu
-    container_name: tgi-server
-    profiles:
-      - codegen-xeon-tgi
+    container_name: tgi-service
     ports:
       - "8028:80"
     volumes:
-      - "${MODEL_CACHE:-./data}:/data"
+      - "./data:/data"
     shm_size: 1g
     environment:
       no_proxy: ${no_proxy}
@@ -25,82 +23,47 @@ services:
       timeout: 10s
       retries: 100
     command: --model-id ${LLM_MODEL_ID} --cuda-graphs 0
-  vllm-service:
-    image: ${REGISTRY:-opea}/vllm:${TAG:-latest}
-    container_name: vllm-server
-    profiles:
-      - codegen-xeon-vllm
-    ports:
-      - "8028:80"
-    volumes:
-      - "${MODEL_CACHE:-./data}:/root/.cache/huggingface/hub"
-    shm_size: 1g
-    environment:
-      no_proxy: ${no_proxy}
-      http_proxy: ${http_proxy}
-      https_proxy: ${https_proxy}
-      HF_TOKEN: ${HUGGINGFACEHUB_API_TOKEN}
-      host_ip: ${host_ip}
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://$host_ip:8028/health || exit 1"]
-      interval: 10s
-      timeout: 10s
-      retries: 100
-    command: --model ${LLM_MODEL_ID} --host 0.0.0.0 --port 80
-  llm-base:
+  llm:
     image: ${REGISTRY:-opea}/llm-textgen:${TAG:-latest}
     container_name: llm-textgen-server
-    environment:
-      no_proxy: ${no_proxy}
-      http_proxy: ${http_proxy}
-      https_proxy: ${https_proxy}
-      LLM_ENDPOINT: ${LLM_ENDPOINT}
-      LLM_MODEL_ID: ${LLM_MODEL_ID}
-      HUGGINGFACEHUB_API_TOKEN: ${HUGGINGFACEHUB_API_TOKEN}
-    restart: unless-stopped
-  llm-tgi-service:
-    extends: llm-base
-    container_name: llm-codegen-tgi-server
-    profiles:
-      - codegen-xeon-tgi
-    ports:
-      - "9000:9000"
-    ipc: host
     depends_on:
       tgi-service:
         condition: service_healthy
-  llm-vllm-service:
-    extends: llm-base
-    container_name: llm-codegen-vllm-server
-    profiles:
-      - codegen-xeon-vllm
     ports:
       - "9000:9000"
     ipc: host
-    depends_on:
-      vllm-service:
-        condition: service_healthy
+    environment:
+      no_proxy: ${no_proxy}
+      http_proxy: ${http_proxy}
+      https_proxy: ${https_proxy}
+      LLM_ENDPOINT: ${TGI_LLM_ENDPOINT}
+      LLM_MODEL_ID: ${LLM_MODEL_ID}
+      HUGGINGFACEHUB_API_TOKEN: ${HUGGINGFACEHUB_API_TOKEN}
+    restart: unless-stopped
   codegen-xeon-backend-server:
     image: ${REGISTRY:-opea}/codegen:${TAG:-latest}
     container_name: codegen-xeon-backend-server
     depends_on:
-      - llm-base
+      - llm
     ports:
       - "7778:7778"
     environment:
       - no_proxy=${no_proxy}
       - https_proxy=${https_proxy}
       - http_proxy=${http_proxy}
-      - MEGA_SERVICE_HOST_IP=${MEGA_SERVICE_HOST_IP}
-      - LLM_SERVICE_HOST_IP=${LLM_SERVICE_HOST_IP}
-      - RETRIEVAL_SERVICE_HOST_IP=${RETRIEVAL_SERVICE_HOST_IP}
+      - MEGA_SERVICE_HOST_IP=${host_ip} #${MEGA_SERVICE_HOST_IP}
+      - LLM_SERVICE_HOST_IP=${host_ip} #${LLM_SERVICE_HOST_IP}
+      # - RETRIEVAL_SERVICE_HOST_IP=${REDIS_RETRIEVER_PORT}
+      - RETRIEVAL_SERVICE_HOST_IP=${host_ip} #${RETRIEVAL_SERVICE_HOST_IP}
       - REDIS_RETRIEVER_PORT=${REDIS_RETRIEVER_PORT}
-      - TEI_EMBEDDING_HOST_IP=${TEI_EMBEDDING_HOST_IP}
+      # - MM_EMBEDDING_SERVICE_HOST_IP=${MM_EMBEDDING_PORT_MICROSERVICE}
+      - TEI_EMBEDDING_HOST_IP=${host_ip} #${TEI_EMBEDDING_HOST_IP}
       - EMBEDDER_PORT=${EMBEDDER_PORT}
+
     ipc: host
     restart: always
   codegen-xeon-ui-server:
-    image: ${REGISTRY:-opea}/codegen-ui:${TAG:-latest}
+    image: ${REGISTRY:-opea}/codegen-gradio-ui:${TAG:-latest}
     container_name: codegen-xeon-ui-server
     depends_on:
       - codegen-xeon-backend-server
@@ -111,6 +74,9 @@ services:
       - https_proxy=${https_proxy}
       - http_proxy=${http_proxy}
       - BASIC_URL=${BACKEND_SERVICE_ENDPOINT}
+      - MEGA_SERVICE_PORT=${MEGA_SERVICE_PORT}
+      - host_ip=${host_ip}
+      - DATAPREP_ENDPOINT=${DATAPREP_ENDPOINT}
     ipc: host
     restart: always
   redis-vector-db:
@@ -119,6 +85,7 @@ services:
     ports:
       - "${REDIS_DB_PORT}:${REDIS_DB_PORT}"
       - "${REDIS_INSIGHTS_PORT}:${REDIS_INSIGHTS_PORT}"
+  
   dataprep-redis-server:
     image: ${REGISTRY:-opea}/dataprep:${TAG:-latest}
     container_name: dataprep-redis-server
@@ -136,6 +103,7 @@ services:
       HUGGINGFACEHUB_API_TOKEN: ${HUGGINGFACEHUB_API_TOKEN}
       LOGFLAG: true
     restart: unless-stopped
+    
   tei-embedding-serving:
     image: ghcr.io/huggingface/text-embeddings-inference:cpu-1.5
     container_name: tei-embedding-serving
@@ -156,6 +124,7 @@ services:
       interval: 10s
       timeout: 6s
       retries: 48
+
   tei-embedding-server:
     image: ${REGISTRY:-opea}/embedding:${TAG:-latest}
     container_name: tei-embedding-server
@@ -172,6 +141,7 @@ services:
       tei-embedding-serving:
         condition: service_healthy
     restart: unless-stopped
+
   retriever-redis:
     image: ${REGISTRY:-opea}/retriever:${TAG:-latest}
     container_name: retriever-redis
@@ -194,6 +164,7 @@ services:
       LOGFLAG: ${LOGFLAG}
       RETRIEVER_COMPONENT_NAME: ${RETRIEVER_COMPONENT_NAME:-OPEA_RETRIEVER_REDIS}
     restart: unless-stopped
+
 networks:
   default:
     driver: bridge
