--- a/CodeGen/docker_compose/intel/cpu/xeon/compose.yaml
+++ b/CodeGen/docker_compose/intel/cpu/xeon/compose.yaml
@@ -6,8 +6,8 @@ services:
   tgi-service:
     image: ghcr.io/huggingface/text-generation-inference:2.4.0-intel-cpu
     container_name: tgi-server
-    # profiles:
-    #   - codegen-xeon-tgi
+    profiles:
+      - codegen-xeon-tgi
     ports:
       - "8028:80"
     volumes:
@@ -25,7 +25,6 @@ services:
       timeout: 10s
       retries: 100
     command: --model-id ${LLM_MODEL_ID} --cuda-graphs 0
-
   vllm-service:
     image: ${REGISTRY:-opea}/vllm:${TAG:-latest}
     container_name: vllm-server
@@ -48,7 +47,6 @@ services:
       timeout: 10s
       retries: 100
     command: --model ${LLM_MODEL_ID} --host 0.0.0.0 --port 80
-  
   llm-base:
     image: ${REGISTRY:-opea}/llm-textgen:${TAG:-latest}
     container_name: llm-textgen-server
@@ -60,12 +58,11 @@ services:
       LLM_MODEL_ID: ${LLM_MODEL_ID}
       HUGGINGFACEHUB_API_TOKEN: ${HUGGINGFACEHUB_API_TOKEN}
     restart: unless-stopped
-
   llm-tgi-service:
     extends: llm-base
     container_name: llm-codegen-tgi-server
-    # profiles:
-    #   - codegen-xeon-tgi
+    profiles:
+      - codegen-xeon-tgi
     ports:
       - "9000:9000"
     ipc: host
@@ -83,7 +80,6 @@ services:
     depends_on:
       vllm-service:
         condition: service_healthy
-  
   codegen-xeon-backend-server:
     image: ${REGISTRY:-opea}/codegen:${TAG:-latest}
     container_name: codegen-xeon-backend-server
@@ -117,14 +113,12 @@ services:
       - BASIC_URL=${BACKEND_SERVICE_ENDPOINT}
     ipc: host
     restart: always
-
   redis-vector-db:
     image: redis/redis-stack:7.2.0-v9
     container_name: redis-vector-db
     ports:
       - "${REDIS_DB_PORT}:${REDIS_DB_PORT}"
       - "${REDIS_INSIGHTS_PORT}:${REDIS_INSIGHTS_PORT}"
-
   dataprep-redis-server:
     image: ${REGISTRY:-opea}/dataprep:${TAG:-latest}
     container_name: dataprep-redis-server
@@ -142,7 +136,6 @@ services:
       HUGGINGFACEHUB_API_TOKEN: ${HUGGINGFACEHUB_API_TOKEN}
       LOGFLAG: true
     restart: unless-stopped
-    
   tei-embedding-serving:
     image: ghcr.io/huggingface/text-embeddings-inference:cpu-1.5
     container_name: tei-embedding-serving
@@ -163,7 +156,6 @@ services:
       interval: 10s
       timeout: 6s
       retries: 48
-
   tei-embedding-server:
     image: ${REGISTRY:-opea}/embedding:${TAG:-latest}
     container_name: tei-embedding-server
@@ -180,7 +172,6 @@ services:
       tei-embedding-serving:
         condition: service_healthy
     restart: unless-stopped
-
   retriever-redis:
     image: ${REGISTRY:-opea}/retriever:${TAG:-latest}
     container_name: retriever-redis
@@ -203,9 +194,6 @@ services:
       LOGFLAG: ${LOGFLAG}
       RETRIEVER_COMPONENT_NAME: ${RETRIEVER_COMPONENT_NAME:-OPEA_RETRIEVER_REDIS}
     restart: unless-stopped
-
-
-
 networks:
   default:
     driver: bridge
