bug fixes and ui updates
Signed-off-by: okhleif-IL <omar.khleif@intel.com>

--- a/CodeGen/docker_compose/intel/cpu/xeon/compose.yaml
+++ b/CodeGen/docker_compose/intel/cpu/xeon/compose.yaml
@@ -111,6 +111,7 @@ services:
       - MEGA_SERVICE_PORT=${MEGA_SERVICE_PORT}
       - host_ip=${host_ip}
       - DATAPREP_ENDPOINT=${DATAPREP_ENDPOINT}
+      - DATAPREP_REDIS_PORT=${DATAPREP_REDIS_PORT}
     ipc: host
     restart: always
   redis-vector-db:
